--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "final-form": "^4.20.1",
     "firebase": "^8.1.1",
+    "mui-rff": "^2.5.6",
     "react": "^17.0.1",
     "react-add-space": "^1.0.7",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-firebase-hooks": "^2.2.0",
     "react-rnd": "^10.2.3",
     "react-router-dom": "^5.2.0",
