user authentication changes and styling

--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.16.1",
     "final-form": "^4.20.1",
     "firebase": "^8.1.1",
+    "material-ui-dropzone": "^3.5.0",
     "mui-rff": "^2.5.6",
     "react": "^17.0.1",
     "react-add-space": "^1.0.7",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-firebase-hooks": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-rnd": "^10.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
